scrollbar style fixed

--- a/src/styles/components/_beer-list.scss
+++ b/src/styles/components/_beer-list.scss
@@ -19,9 +19,9 @@
 }
 
 .beer-list__inactive {
-    position: relative;
     width: 50%;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 .beer-list__active {
@@ -31,8 +31,8 @@
 
 .beer-list__items {
     overflow-y: scroll;
-    margin-top: 10px;
-    height: 65%;
+    margin: 10px 0;
+    height: 70%;
 }
 
 .beer-list__bar {
@@ -41,6 +41,7 @@
     justify-content: space-around;
     margin: auto;
     height: 40px;
+    z-index: 1;
 }
 
 .beer-list__search-bar {
